--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vuepub",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Just a package for quick publish vue3 projects",
   "main": "index.js",
   "bin": {
@@ -9,7 +9,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["publish","vue3","vue"],
+  "keywords": [
+    "publish",
+    "vue3",
+    "vue"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
