--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Just a package for quick publish vue3 projects",
   "main": "index.js",
   "bin": {
-    "publish-win": "./scripts/publish-win.js"
+    "publish-win": "./scripts/publish-win.js",
+    "publish-linux": "./scripts/publish-linux.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,7 +18,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "compressing": "^1.9.1",
     "minimist": "^1.2.8",
+    "ssh2": "^1.14.0",
     "ssh2-sftp-client": "^9.1.0"
   }
 }
